infrastructure/kubernetes/templates/network/api-gateway-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paynext-api-gateway-policy
  namespace: paynext
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8002
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: eureka-server
      ports:
        - protocol: TCP
          port: 8001
    - to:
        - podSelector:
            matchLabels:
              app: user-service
      ports:
        - protocol: TCP
          port: 8003
    - to:
        - podSelector:
            matchLabels:
              app: payment-service
      ports:
        - protocol: TCP
          port: 8004
    - to:
        - podSelector:
            matchLabels:
              app: notification-service
      ports:
        - protocol: TCP
          port: 8005
  policyTypes:
    - Ingress
    - Egress
